--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -19,6 +19,25 @@ html {
   font-size: 10px;
   color: var(--color-white);
   height: 100vh;
+
+
+  ::-webkit-scrollbar {
+    width: .8rem;
+
+  }
+
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+
+  ::-webkit-scrollbar-thumb {
+    background: var(--color-black);
+    border-radius: .4rem;
+    height: 32rem;
+
+  }
 }
 p+p {
   margin: 0;
@@ -35,15 +54,47 @@ body {
   margin: 0 auto;
 }
 
+.txt {
+  &--xl {
+    font-weight: 700;
+    font-size: 3.6rem;
+    line-height: 3.6rem;
+  }
+
+  &--xm {
+    font-weight: 500;
+    font-size: 3.2rem;
+    line-height: 3.2rem;
+  }
+  &--xs {
+    font-weight: 700;
+    font-size: 1.2rem;
+    line-height: 120%;
+  }
+  &--xss {
+    font-weight: 400;
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+  }
+  &--m {
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2rem;
+  }
+  &--brown {
+    color: var(--color-brown);
+  }
+  &--white {
+    color: var(--color-white);
+  }
+}
+
 .main {
   &__wrap {
     margin: 4rem 0;
     padding-bottom: 1.8rem;
     border-bottom: 1px solid var(--color-gray);
     &-title {
-      font-weight: 500;
-      font-size: 3.2rem;
-      line-height: 3.2rem;
       padding-bottom: 1.8rem;
     }
     &-back {
@@ -66,6 +117,15 @@ body {
         top: 50%;
         transform: translateY(-50%);
         background: url("@/assets/images/arrow.svg") no-repeat center center / 100%;
+      }
+    }
+    &__filters {
+      display: flex;
+      align-items: center;
+      .films-checkbox {
+        &:first-child {
+          padding-right: 3.2rem;
+        }
       }
     }
   }
